--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="block">
         <h2 class="card-title">1 спринт: Я — чистый лист</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_sepia" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_sepia" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">&lt;/HTML&gt;</span>
           </div>
@@ -82,7 +82,7 @@
       <section class="block">
         <h2 class="card-title">1 спринт: А если не получится?</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_saturate" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_saturate" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">&lt;CSS&gt;</span>
           </div>
@@ -111,7 +111,7 @@
       <section class="block">
         <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_hue-rotate" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_hue-rotate" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">&lt;desigions&gt;</span>
           </div>
@@ -140,7 +140,7 @@
       <section class="block">
         <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_invert" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_invert" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">care</span>
           </div>
@@ -169,7 +169,7 @@
       <section class="block">
         <h2 class="card-title">3 спринт: Обходные стратегии</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_grayscale" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_grayscale" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">&lt;support&gt;</span>
           </div>
@@ -198,7 +198,7 @@
       <section class="block">
         <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_blur" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_blur" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">&lt;lifes-style&#58; none&#59;&gt;</span>
           </div>
@@ -227,7 +227,7 @@
       <section class="block">
         <h2 class="card-title">«Сейчас я здесь»</h2>
         <div class="card-image-wrapper">
-          <img class="card-auto filter_mix" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах"/>
+          <img class="card-auto filter_mix" src="/svg/image.svg" alt="изображение автомобиля по типу дом-на-колесах" loading="lazy"/>
           <div class="watermark">
             <span class="watermark-text">&lt;experience&gt;</span>
           </div>
