--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <link rel="apple-touch-icon" href="./images/favicon.png">
   </head>
   <body class="page">
-    <header class="header">
-      <div class="block header-block">
+    <header class="header block">
+      <div class="header-block">
         <h1 class="title-header">&lt;/HTML&gt;</h1>
         <p class="title-text">закрывающий тег</p>
-      </div>
+      <!-- </div> -->
     </header>
     <main class="main">
       <article class="block">
@@ -238,24 +238,24 @@
         </div>
       </article>
     </main>
-    <div class="footer_save">
-      <button class="button footer-button_save " type="button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
+    
+      <button class="button footer-button_save button-save" type="button" onclick="window['dialog-id'].showModal()" aria-controls="dialog-id">
         <svg aria-hidden="true" class="floppy-svg" fill="currentColor" viewBox="0 0 39 39">
           <use href="./svg/disk.svg?a=7#floppy"  />
         </svg>
-         <span class="button__text button__text-footer_save">Сохранить на память</span> 
+        <span class="button__text">Сохранить на память</span> 
       </button>
-    </div>
+    
 
     <dialog class="dialog" id="dialog-id">
       <div class="save-info">
         <svg aria-hidden="true" class="floppy-svg-dialog" fill="currentColor" viewBox="0 0 39 39">
           <use href="./svg/disk.svg?a=7#floppy"  />
         </svg>
-        <span class="button__text-dialog">Вставьте дискету, чтобы продолжить</span>
+        <p class="button__text-dialog">Вставьте дискету, чтобы продолжить</p>
       </div>
       <button class="button button__dialog" type="button" onclick="window['dialog-id'].close()" aria-controls="dialog-id">
-        <span class="button__text-dialog-ok">OK</span>
+        <span class="button__text">OK</span>
       </button>
     </dialog>
 
