--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header-block">
         <h1 class="title-header">&lt;/HTML&gt;</h1>
         <p class="title-text">закрывающий тег</p>
-      <!-- </div> -->
+      </div>
     </header>
     <main class="main">
       <article class="block">
